Changes by yuval